--- a/experimental/configs/onboarding_network_config_indexed.yaml
+++ b/experimental/configs/onboarding_network_config_indexed.yaml
@@ -48,18 +48,18 @@ parameters:
     label: f5 BIG-IP VE VLAN SelfIP Address
     description: Self-IP address to associate with the BIG-IP VLAN.
   self_cidr_blocks:
-    type: comma_delimited_list 
+    type: comma_delimited_list
     label: f5 BIG-IP VE VLAN CIDR Block
     description: CIDR Block for the BIG-IP SelfIP address.
   self_port_lockdowns:
     type: comma_delimited_list
     label: f5 BIG-IP VE VLAN Allow Services
-    description: Optional list of <service:port> lockdown settings for the VLAN. If no value is supplied, default port lockdown settings are used. 
+    description: Optional list of <service:port> lockdown settings for the VLAN. If no value is supplied, default port lockdown settings are used.
     default:
-      - 
+      -
   wait_handle_curl:
     type: string
-    label: Wait Handle 
+    label: Wait Handle
     description: Resolved curl_cli value of the WaitConditionHandle that enables status signals to be sent back to Heat.
 
 resources:
@@ -69,33 +69,33 @@ resources:
       cloud_config:
         merge_how: dict(recurse_array,no_replace)+list(append)
         write_files:
-        - path: { get_param: script_path }
-          permissions: 0755
-          owner: root:root
-          content:
-            str_replace:
-              params:
-                __default_gateway__: { get_param: default_gateway }
-                __network_vlan_name__ : { get_param: [vlan_names, {get_param: vlan_nic_index} ] }
-                __network_vlan_create__: True
-                __network_vlan_tag__ : { get_param: [ vlan_tags, {get_param: vlan_nic_index}]}
-                __network_vlan_mtu__ : { get_param: [ vlan_mtus, {get_param: vlan_nic_index}]}
-                __network_vlan_nic__ : ""
-                __network_nic_count__ : { get_param: nic_count}
-                __network_vlan_nic_index__ : { get_param: vlan_nic_index }
-                __network_vlan_last_nic_index__ : { get_param: vlan_last_nic_index }
-                __network_self_name__ : ""
-                __network_self_ip_addr__ : { get_param: [self_ip_addrs, {get_param: vlan_nic_index} ] }
-                __network_self_cidr_block__ : { get_param: [self_cidr_blocks, {get_param: vlan_nic_index} ] }
-                __network_self_port_lockdown__ :
-                  list_join:
-                  - ' '
-                  - 
-                    str_split:
-                      - ';'
-                      - { get_param: [self_port_lockdowns, { get_param: vlan_nic_index }] }
-                wc_notify: { get_param: wait_handle_curl }
-              template: { get_file: ../scripts/onboard-network.sh}
+          - path: { get_param: script_path }
+            permissions: 0755
+            owner: root:root
+            content:
+              str_replace:
+                params:
+                  __default_gateway__: { get_param: default_gateway }
+                  __network_vlan_name__: { get_param: [vlan_names, {get_param: vlan_nic_index} ] }
+                  __network_vlan_create__: true
+                  __network_vlan_tag__: { get_param: [ vlan_tags, {get_param: vlan_nic_index}]}
+                  __network_vlan_mtu__: { get_param: [ vlan_mtus, {get_param: vlan_nic_index}]}
+                  __network_vlan_nic__: ""
+                  __network_nic_count__: { get_param: nic_count}
+                  __network_vlan_nic_index__: { get_param: vlan_nic_index }
+                  __network_vlan_last_nic_index__: { get_param: vlan_last_nic_index }
+                  __network_self_name__: ""
+                  __network_self_ip_addr__: { get_param: [self_ip_addrs, {get_param: vlan_nic_index} ] }
+                  __network_self_cidr_block__: { get_param: [self_cidr_blocks, {get_param: vlan_nic_index} ] }
+                  __network_self_port_lockdown__:
+                    list_join:
+                      - ' '
+                      -
+                        str_split:
+                          - ';'
+                          - { get_param: [self_port_lockdowns, { get_param: vlan_nic_index }] }
+                  wc_notify: { get_param: wait_handle_curl }
+                template: { get_file: ../scripts/onboard-network.sh}
 outputs:
   OS::stack_id:
     description: F5::BigIP::OnboardNetworkConfig resource.
