some minor fixes to var names, and ensure first cloudconfig merge_how is set to override (append by default)

--- a/experimental/configs/onboarding_scripts.yaml
+++ b/experimental/configs/onboarding_scripts.yaml
@@ -153,6 +153,7 @@ resources:
     type: OS::Heat::CloudConfig
     properties:
       cloud_config:
+        merge_how: dict(recurse_array,no_replace)+list(append)
         write_files:
           - path: /config/cloud/openstack/bigIqPwd
             permissions: 0755
