--- a/experimental/networks/bigip_neutron_port.yaml
+++ b/experimental/networks/bigip_neutron_port.yaml
@@ -27,9 +27,9 @@ resources:
       network: { get_param: [network_names, { get_param: index }] }
       security_groups: [{ get_param: [ security_groups, { get_param: index}] }]
       admin_state_up: true
-      allowed_address_pairs:
-        - ip_address: 0.0.0.0/0
-        - ip_address: ::/0
+      # allowed_address_pairs:
+      #   - ip_address: 0.0.0.0/0
+      #   - ip_address: ::/0
       fixed_ips:
         repeat:
           for_each:
