--- a/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic_env.yaml
+++ b/experimental/templates/cluster/nnic/prod_stack/static/f5_bigip_cluster_n_nic_env.yaml
@@ -20,6 +20,7 @@ parameters:
   bigip_mgmt_nic_mtu: 1400
   bigip_servers_dns:
   mgmt_network: mgmt-dhcp-disabled
+  mgmt_subnet: mgmt-dhcp-disabled_subnet
   mgmt_security_group_name: Mgmt_secgroup_2_NIC_cluster
   bigip_nic_count: 2
   network_vlan_names_cluster_index: 1
@@ -41,6 +42,17 @@ parameters:
       - dev-data3-subnet1
       - dev-data4-subnet
       - dev-data5-subnet
+  network_vlan_static_self_ips:
+    - - 10.1.1.10
+      - 10.1.2.10
+      - 10.1.3.10
+      - 10.1.4.10
+      - 10.1.5.10
+    - - 10.1.1.20
+      - 10.1.2.20
+      - 10.1.3.20
+      - 10.1.4.20
+      - 10.1.5.20
   network_vlan_security_group_rules:
     security_group_rules:
       - rules:
